--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,22 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-    <p>Welcome to SportEquip Application!</p>
-  </body>
-</html>
+<div class="categories">
+    <div class="product">
+      <img src="/images/weighted-sled.png" alt="Weighted Sled">
+      <h3>Weighted Sleds</h3>
+      <p>Enhance your strength training with our premium sleds.</p>
+    </div>
+    <div class="product">
+      <img src="/images/resistance-bands.png" alt="Resistance Bands">
+      <h3>Resistance Bands</h3>
+      <p>Perfect for strength and recovery exercises.</p>
+    </div>
+    <div class="product">
+      <img src="/images/swim-kickboard.png" alt="Swim Kickboard">
+      <h3>Swim Kickboards</h3>
+      <p>Improve your swimming technique with durable kickboards.</p>
+    </div>
+    <div class="product">
+      <img src="/images/agility-ladder.png" alt="Agility Ladder">
+      <h3>Agility Ladders</h3>
+      <p>Boost your agility and footwork with our high-quality ladders.</p>
+    </div>
+  </div>
