--- a/views/add-product.ejs
+++ b/views/add-product.ejs
@@ -1,5 +1,3 @@
-<%- include('header') %>
-
 <div class="container">
     <h1 class="text-center my-4">➕ Add New Product</h1>
     <form action="/products/add" method="POST">
@@ -16,10 +14,16 @@
         <input type="number" name="stock_quantity" required class="form-control"><br>
 
         <label>Category:</label>
-        <input type="text" name="category" required class="form-control"><br>
+        <select name="category" required class="form-control">
+            <option value="Strength Training">Strength Training</option>
+            <option value="Cardio Equipment">Cardio Equipment</option>
+            <option value="Swimming Gear">Swimming Gear</option>
+            <option value="Recovery Tools">Recovery Tools</option>
+        </select><br>
+
+        <label>Image URL:</label>
+        <input type="text" name="image_url" class="form-control"><br>
 
         <button type="submit" class="btn btn-primary">Add Product</button>
     </form>
 </div>
-
-<%- include('footer') %>
